--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -76,7 +76,9 @@
  ```
  >xml的注释，不允许放置在文档的第一行，必须在文档声明的下面
  
- ### 7.CDATA区
+ 
+ 
+ ## CDATA区
  * 非法字符
  ```
     严格的讲，在xml中仅有字符“<”和“&”是非法的。可jiang3其替换为实体引用
@@ -86,3 +88,9 @@
  如果某段字符串里面有过多的字符，并且里面包含了类似标签或者关键字，不想让xml的解析器去解析，可以使用CDATA来包装。<br>
 `<![CDATA[]]>  
 如：<dress><![CDATA[<a href="http://baidu.com">百度</a>]]><dress/>`
+
+
+## XML 解析
+
+*DOM
+*SAX
