--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -91,5 +91,11 @@
 
 
 ## XML 解析
+* DOM <br>
+DOM ： dociment.把整xml全部读到内存中，形成树状结构。整个文档称之为document对象，属性对应Attribute对象，所有的元素结点对应Element对象，文件也可称之为Text对象，以上所有的对象可以称之为Node节点。如果xml特别大，讲造成内存溢出。可以对数据进行增删操作。<br>
+
 ![picture](https://github.com/WuDeluan/Notes/blob/master/picture/xml1.PNG)
+
+* SAX <br>
+SAX : Simple API for xml 基于事件驱动。读一行，解析一行。不会造成内存溢出，不可以进行增删，只能查询。
  
