--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -91,11 +91,55 @@
 
 
 ## XML 解析
+> 其实就是获取元素里面的字符数据或者属性数据
+
+### 1.解析方式
+>有多种，常用的有两种
+
 * DOM <br>
-DOM ： dociment.把整xml全部读到内存中，形成树状结构。整个文档称之为document对象，属性对应Attribute对象，所有的元素结点对应Element对象，文件也可称之为Text对象，以上所有的对象可以称之为Node节点。如果xml特别大，讲造成内存溢出。可以对数据进行增删操作。<br>
+>DOM ： dociment.把整xml全部读到内存中，形成树状结构。整个文档称之为document对象，属性对应Attribute对象，所有的元素结点对应Element对象，文件也可称之为Text对象，以上所有的对象可以称之为Node节点。如果xml特别大，讲造成内存溢出。可以对数据进行增删操作。<br>
 
 ![picture](https://github.com/WuDeluan/Notes/blob/master/picture/xml1.PNG)
 
 * SAX <br>
-SAX : Simple API for xml 基于事件驱动。读一行，解析一行。不会造成内存溢出，不可以进行增删，只能查询。
+>SAX : Simple API for xml 基于事件驱动。读一行，解析一行。不会造成内存溢出，不可以进行增删，只能查询。
+ 
+ ### 2.Dom4j 基本用法
+ ```
+ <stu>
+         <name>张三</name>
+         <age>18</age>
+         <adress>北京</adress>
+    </stu>
+    <stu>
+         <name>李四</name>
+         <age>17</age>
+         <adress>上海</adress>
+    </stu>
+ ```
+ > 1.创建sax读取对象
+ ```
+ SAXReader reader = new SAXReader();
+ ```
+ > 2.指定解析的xml源
+ ```
+ Document document = reader.read(new file("src/xml"));
+ ```
+ > 3.得到根元素
+ ```
+ ELement rootElement = document.getRootElement();
+ ```
+ > 4.获取根元素下的子元素age
+ ```
+ rootELement.emelent("stu").element("age").getText();
+ ```
+ > 5。遍历所有stu子元素
+ ```
+ for(Element element : elements){
+     String name = element.element("name").getText();
+     String age = element.element("age").getText();
+     String address = element.element("address").getText();
+     }
+  ```
+ 
  
