--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -117,24 +117,22 @@
          <adress>上海</adress>
     </stu>
  ```
- > 1.创建sax读取对象
- ```
+ <!-- 1.创建sax读取对象 -->
  SAXReader reader = new SAXReader();
- ```
- > 2.指定解析的xml源
- ```
+
+<!-- 2.指定解析的xml源 -->
  Document document = reader.read(new file("src/xml"));
- ```
- > 3.得到根元素
- ```
+
+<!-- 3.得到根元素 -->
+
  ELement rootElement = document.getRootElement();
- ```
- > 4.获取根元素下的子元素age
- ```
+
+ <!-- 4.获取根元素下的子元素age -->
+
  rootELement.emelent("stu").element("age").getText();
- ```
- > 5。遍历所有stu子元素
- ```
+
+<!-- 5.遍历所有stu子元素 -->
+
  for(Element element : elements){
      String name = element.element("name").getText();
      String age = element.element("age").getText();
