--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -141,4 +141,12 @@
      }
   ```
  
+ ### 3.Dom4j 的 Xpath使用
+ > dome4j里面支持Xpath的写法。Xpath其实是xml的语言路径，支持我们在解析xml的时候，能够快速的定位到具体的某一个元素。
+ 
+ 1.添加jar包支持
+ 2.在查找制定节点是，根据Xpath语法规则来查找
+ 3.后续的代码与之前的解析代码一样
+ 
+ ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/xml2.PNG)
  
