--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -117,7 +117,7 @@
          <adress>上海</adress>
     </stu>
  ```
- ```
+ ```xml
  <!-- 1.创建sax读取对象 -->
  SAXReader reader = new SAXReader();
 
@@ -150,3 +150,63 @@
  
  ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/xml2.PNG)
  
+### 4.XML 约束
+> DTD元素<br>
+   `<!ELEMENT 元素名称 (#PCDATA)>`   --简单元素<br>
+   `<!ELEMENT 元素名称 (子元素名称 1,子元素名称 2,.....)> `   --带有子元素（序列）的元素，有顺序要求<br>
+   `<!ELEMENT 元素名称 (子元素名称 1|子元素名称 2)>`   --声明“非.../既...”类型的内容<br>
+   `<!ELEMENT 元素名称 (子元素名称+)>`   --声明最少出现一次的元素<br>
+   `<!ELEMENT 元素名称 (子元素名称*)>`   --声明出现零次或多次的元素<br>
+   `<!ELEMENT 元素名称 (子元素名称?)>`   --声明出现零次或一次的元素<br>
+> DTD属性<br>
+  `<!ATTLIST 元素名称 属性名称 属性类型 默认值>`   --属性声明<br>
+```
+属性类型：
+    CDATA 值为字符数据 (character data) 
+    (en1|en2|..) 此值是枚举列表中的一个值 
+    ID 值为唯一的 id 
+    IDREF 值为另外一个元素的 id 
+    IDREFS 值为其他 id 的列表 
+    NMTOKEN 值为合法的 XML 名称 
+    NMTOKENS 值为合法的 XML 名称的列表 
+    ENTITY 值是一个实体 
+    ENTITIES 值是一个实体列表 
+    NOTATION 此值是符号的名称 
+    xml: 值是一个预定义的 XML 值 
+默认值：
+    #REQUIRED 属性值是必需的 
+    #IMPLIED 属性不是必需的 
+    #FIXED value 属性值是固定的 
+
+```
+
+   
+```
+stus.dtd
+<!ELEMENT stus (stu*)>
+<!ELEMENT stu (name,age)>
+<!ELEMENT name (#PCDAPTA))
+<!ELEMENT age (#PCDATA)>
+<!ATTLIST stu id CDATA #IMPLIED)>
+```
+> 引入DTD
+* 引入网络DTD
+```
+<!-- 文档类型 根标签名字 网络上的dtd dtd名称 dtd路径 -->
+<!DOCTYPE stu PUBLIC "//UNKNOWN/" "unkmown.dtd" >
+```
+* 引入本地DTD
+```
+<!-- 文档类型 根标签名字  dtd路径 -->
+<!DOCTYPE stu SYSTEM "stu.dtd" >
+```
+* 直接内嵌DTD
+```
+<!DOCTYPE stus [
+     <!ELEMENT stus (stu*)>
+<!ELEMENT stu (name,age)>
+<!ELEMENT name (#PCDAPTA))
+<!ELEMENT age (#PCDATA)>
+<!ATTLIST stu id CDATA #IMPLIED)>
+]>
+```
