--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -210,3 +210,45 @@ stus.dtd
 <!ATTLIST stu id CDATA #IMPLIED)>
 ]>
 ```
+
+### 5.XSD - <schema> 元素
+> 一个 schema 声明往往看上去类似这样:<br>
+```
+  <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"
+  targetNamespace="http://www.w3school.com.cn"
+  xmlns="http://www.w3school.com.cn"
+  elementFormDefault="qualified">
+```
+①`xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"`显示 schema 中用到的元素和数据类型来自命名空间 "http://www.w3.org/2001/XMLSchema".同时它还规定了来自命名空间 "http://www.w3.org/2001/XMLSchema" 的元素和数据类型应该使用前缀 xs：<br>
+②`targetNamespace="http://www.w3school.com.cn"`显示被此 schema 定义的元素 (note, to, from, heading, body) 来自命名空间： "http://www.w3school.com.cn"。<br>
+③`xmlns="http://www.w3school.com.cn" `指出默认的命名空间是 "http://www.w3school.com.cn"。<br>
+④`elementFormDefault="qualified" `指出任何 XML 实例文档所使用的且在此 schema 中声明过的元素必须被命名空间限定。<br>
+
+>在 XML 文档中引用 Schema:<br>
+```
+<note xmlns="http://www.w3school.com.cn"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://www.w3school.com.cn note.xsd">
+
+<to>George</to>
+<from>John</from>
+<heading>Reminder</heading>
+<body>Don't forget the meeting!</body>
+</note>
+```
+①`xmlns="http://www.w3school.com.cn"`规定了默认命名空间的声明。此声明会告知 schema 验证器，在此 XML 文档中使用的所有元素都被声明于 "http://www.w3school.com.cn" 这个命名空间。<br>
+②有了可用的 XML Schema 实例命名空间：`xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"`,就可以使用 schemaLocation 属性了。此属性有两个值。第一个值是需要使用的命名空间。第二个值是供命名空间使用的 XML schema 的位置：`xsi:schemaLocation="http://www.w3school.com.cn note.xsd"`<br>
+ 
+> schema中元素声明
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/xml3.PNG)
+
+### 名称空间的作用
+一个xml可以引用多个schema约束，但只等阴影一个DTD约束。<br>
+名称空间的作用就是在写元素的时候，可以指定该元素使用的是哪一套约束规则。默认情况下，如果只有一套规则，那么可以这么写：<br>
+```
+<!-- 单个 -->
+<name>张三</name>
+<!-- 多个 -->
+<aa:name>张三</aa:name>
+<bb:name>李四</bb:name>
+````
