--- a/Javaweb/3.http协议.md
+++ b/Javaweb/3.http协议.md
@@ -11,8 +11,38 @@
  >1.1  请求数据，服务器返回后，连接还会保持着，除非服务器或者而客户端关闭。有一定的时间限制，如果都空着这个连接，呢么后面会自己断掉。
  
  ### Http请求数据解释
- > 请求数据包括 : 请求行 \ 请求头 \ 请求数据
- * 请求行
-    ![icon]()
+ > 请求数据包括 : 请求行 \ 请求头 \ 请求数据<br>
  
+ * 请求行
+ 
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http1.PNG)    
+ * 请求头
+ 
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http2.PNG)   
+ * 请求数据
+ 
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http3.PNG)
+ 
+### Http响应数据解析
+> 请求数据包括 : 响应行 \ 响应头 \ 响应数据<br>
+
+ * 响应行
+ 
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http5.PNG)    
+ * 响应头
+ 
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http6.PNG)   
+
+ 
+ ## GET　和　POST
+   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/http7.PNG) 
+   
+* post
+
+    1.数据是以流的方式写过去,不会再地址栏上显示,一般再提交数据到服务七是使用.<br>
+    2.以流的方式写数据,数据没有大小限制.
+* get
+
+    1.再地址栏后面凭借数据,所以有安全隐患.一般从服务器获取数而不用提交数据到服务器是使用.<br>
+    2.能够带的数据有限,1kb大小.
  
