--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -51,20 +51,21 @@
 > 从创建到销毁所调用的那些方法
 
 * 主要方法
-> * init方法
-``` 
+  * init方法
+    ``` 
       1.在创建该Servlet的是历史,就执行该方法
       2.一个servle只会初始化一次init方法
       3.默认情况下,初次访问该servlet才会创建实例
-```
-> * service方法
-```
+     ```
+     
+  * service方法
+     ```
        1.只要客户端来了一个请求,那么就执行一次该方法
        2.该方法可以被执行多次
-```
-> * destory方法
-```
+     ```
+  * destory方法
+     ```
        1.servlet销毁的时候,就会执行该方法
            ①该项目冲tomcat里里面移出
            ②正常关闭tomcat就会执行shutdown.bat
-```
+     ```
