--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -1,6 +1,9 @@
 # Servlet
 
-* servlet是什么
+## Servlet基础
+
+#### * servlet是什么
+
 > 其实就是一个Java程序,运行在web服务器上,用于接收和响应客户端的http请求.<br>
  更多的是配合动态资源来做.当静态资源也需要使用带servlet,只不过是Tomcat里面已经定义好的一个DefaultServlet.
 
@@ -69,3 +72,117 @@
            ①该项目冲tomcat里里面移出
            ②正常关闭tomcat就会执行shutdown.bat
      ```
+>doGet和doPost不算生命周期方法,所谓生命周期方法是指,冲对象的创建到销毁一定会执行的方法,但是这两个方法不一定会被执行.
+
+### 让servlet创建实例的时机提前
+
+1.默认情况下,只有在初次访问servlet的时候,才会执行init方法,有时候我们可能需要在这个方法里执行一些初始化工作,甚至是做一些比较耗时的逻辑.
+2.那么这个时候,初次访问,可能会在init方法中逗留较旧的时间,所以需要使初始化的时间提前一点.
+3.在配置的时候,使用`load-on-start`元素来指定,给定的数字越小,启动的时机就越早,一般不写负数,从2开始即可.
+
+```xml
+       <servlet>
+             <servlet-name>HelloServlet</servlet-name>
+             <servlet-class>com.firstweb.HelloServelet</servlet-class>
+             <load-on-startup>2</load-on-startup>
+        </servlet>
+```
+
+## ServletConfig
+
+```java
+    //1.得到servlet配置对象,专门用于在配置servlet的信息
+    ServletConfig config = getServletConfig();
+    
+          //获取道德是配置servlet里面的servlet-name的文本内容
+          String servletName = config.getServeletName();
+          System.out.println("servletName=" + servletName);
+    
+    //2.可以获取具体的某一个参数
+    String address = config.getInitParameter("address");
+    System.out.println("address=" + address);
+    
+    //3.获取所有参数的名称
+    Enumeration<String> names = config.getInitParameterNames();
+          //遍历所有的参数名称
+          while(name.hashMoreElements()){
+                  String key = (String) names.nextElement();
+                  String value = config.getInitParameter(key);
+                  System.out.println("key=" + key + " value=" + value);  
+          }  
+```
+
+> 使用他人开发的servlet,如果刚好这个servlet里面需要一个数字或者变量,我们在注册servlet时,需要在web.xml里生命init-params.
+
+##  HttpServletRequest和HttpServletResponse
+
+### Servlet配置方式
+
+* 1.全路径匹配
+
+  * 以 / 开始  /a /aa/bb
+
+  * localhost:8080/项目名称/aa/bb
+
+* 2.路径匹配,前半段匹配
+
+  * 以 / 开始,以 * 结束  /a/*
+
+  * \*其实时一个配符,匹配任意文字
+
+  * localhost:8080/项目名称/*
+
+* 3.以扩展名匹配
+
+  * 写法: /\*.扩展名  /\*.aa   /\*.bb 
+  
+
+## ServletContext
+* Servlet 上下文
+
+> 每个java虚拟机中的每个web工程只有一个ServletContext对象
+
+### ServletContxet的作用
+
+#### 1.可以获取全局变量
+* 声明
+```xml
+        <context-param>
+                <param-name>address</param-name>
+                <param-name>北京</param-name>
+        </context-param>
+```
+* 获取
+```java
+      ServeletContext context = getServletContext();
+      String address = context.getInitParameter("address");
+```
+#### 2.可以获取web应用中的资源
+
+* 获取资源在tomcat里面的绝对路径
+  * 到的是项目在tomcat里面的根目录<br>
+ `ontext.getRealpath("");`
+  * 这里得到的是文件的绝对路径<br>
+`String path = context.getRealPath("file/config.properties");`
+ ```java
+ //1.ServletContext对象
+ ServletContext context = getServletContext();
+ //获取给定文件在服务器上的绝对路径
+ String path = context.getRealPath("file/config.properties");
+ 
+ //2创建属性对象
+ Properties properties = new Properties();
+ InputStream is = new FileInputStream(path);
+ properties.load(is);
+ 
+ //3.获取name属性的值
+ String naem = properties.getProperty("name");
+ ```
+ 
+ * getResourceAsStream获取资源流对象
+ 
+ ![icon](https://github.com/WuDeluan/Notes/tree/master/picture/servlet3.PNG)
+ 
+ * 根据classloader去获取工程下的资源 加载器(JDBC)
+ 
+  ![icon](https://github.com/WuDeluan/Notes/tree/master/picture/servlet4.PNG)
