--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -185,9 +185,9 @@
 stus.dtd
 <!ELEMENT stus (stu*)>
 <!ELEMENT stu (name,age)>
-<!ELEMENT name (#PCDAPTA))
+<!ELEMENT name (#PCDATA)>
 <!ELEMENT age (#PCDATA)>
-<!ATTLIST stu id CDATA #IMPLIED)>
+<!ATTLIST stu id CDATA #IMPLIED>
 ```
 > 引入DTD
 * 引入网络DTD
@@ -205,9 +205,9 @@ stus.dtd
 <!DOCTYPE stus [
      <!ELEMENT stus (stu*)>
 <!ELEMENT stu (name,age)>
-<!ELEMENT name (#PCDAPTA))
+<!ELEMENT name (#PCDATA)>
 <!ELEMENT age (#PCDATA)>
-<!ATTLIST stu id CDATA #IMPLIED)>
+<!ATTLIST stu id CDATA #IMPLIED>
 ]>
 ```
 
