--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -143,8 +143,11 @@
 > 每个java虚拟机中的每个web工程只有一个ServletContext对象
 
 ### ServletContxet的作用
+1.可以获取全局变量
+2.可以获取web应用中的资源
+3.存取数据，servlet间共享数据 域对象
 
-#### 1.可以获取全局变量
+#### 可以获取全局变量
 * 声明
 ```xml
         <context-param>
@@ -154,10 +157,13 @@
 ```
 * 获取
 ```java
+      //强制类型转换
+      String address = (String)getServletContext().getInitParameter("address");
+
       ServeletContext context = getServletContext();
       String address = context.getInitParameter("address");
 ```
-#### 2.可以获取web应用中的资源
+#### 可以获取web应用中的资源
 
 * 获取资源在tomcat里面的绝对路径
   * 到的是项目在tomcat里面的根目录<br>
@@ -186,3 +192,111 @@
  * 根据classloader去获取工程下的资源 加载器(JDBC)
  
   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet4.PNG)
+
+#### 存取数据，servlet间共享数据 域对象
+
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet5.PNG)
+ 
+1.定义一个html页面，定义一个form表单
+```html
+login.html
+
+      <body>
+           <h2>请输入以下内容，完成登录</h2>
+
+            <form action="LoginServlet" method="get">
+                账号: <input type="text" name="username"/><br> 
+                密码: <input type="password" name="password"/><br>
+                <input type="submit" value="登录"/>
+            </form>
+
+      </body>
+```
+
+* 细节处理 
+ ```html
+          <!--      A路径：Servlet的路径： -->
+          <!--             http:localhost:8080/Demo04/LoginServlet -->
+          <!--      B路径：当前这个html的路径 -->
+          <!--              http:localhost:8080/Demo04/login.html -->
+          
+           <!-- 所以action的值为servlet的路径 -->
+           <form action="LoginServlet" method="get">
+           
+            <!-- 也可以写绝对路径路径 -->
+            <form action="/Demo04/LoginServlet" method="get">
+ ```
+2.定义一个Servlet,名为LoginServlet
+```java
+
+LoginServlet.java
+
+      protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        //1.获取数据
+        String userName = request.getParameter("username");
+        String password = request.getParameter("password");
+
+        //2.校验数据
+       }
+ ```
+3.针对成功或者失败，进行判断，然后跳转新页面
+```java
+LoginServlet.java
+
+     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+       //1.获取数据
+       String userName = request.getParameter("username");
+       String password = request.getParameter("password");
+
+       //2.校验数据
+
+       //向客户端输出内容
+       PrintWriter pw = response.getWriter();
+
+       if("admin".equals(userName) && "123".equals(password)){
+        //跳转到成功得界面
+       
+        //设置状态码 重新定位 状态码
+        response.setStatus(302);
+        //定位跳转到得页面
+        response.setHeader("Location", "login_success.html");
+       }
+       else{
+        pw.write("login failed!");
+       }
+      }
+```
+4.统计成功登录次数
+```java
+       if("admin".equals(userName) && "123".equals(password)){
+          //1.成功的次数累加
+
+          //获取以前的数据，在旧值得基础上加1
+          Object obj = getServletContext().getAttribute("count");
+          //默认就是0
+          int totalCount = 0;
+          if(obj != null) {
+           totalCount = (int)obj;
+          }
+          //累加
+          getServletContext().setAttribute("count", totalCount + 1);
+
+
+            //2.跳转到成功得界面
+          }
+
+   ```
+   
+   5.在界面上显示成功登录数量
+   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet6.PNG)
+   
+   ### Servlet何时创建，何时销毁
+   创建：服务器启动的时候,会为托管得每一个web应用程序创建一个servletContext对象。
+   销毁：从服务器移除托管，或者是关闭服务器。
+   * ServletContext 的作用范围
+   > 只要在这个项目里面都可以取数据
+   
+   ## HttpServletRequest
+   
+   > 这个对象
+   
