--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -287,8 +287,23 @@ LoginServlet.java
 
    ```
    
-   5.在界面上显示成功登录数量
-   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet6.PNG)
+5.在界面上显示成功登录数量
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet6.PNG)
+
+```xml
+       <body>
+            <h2>登录成功</h2>
+            <a href="CountServlet">获取网站登陆成功总数</a>
+       </body>
+```
+
+```java
+          protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+                PrintWriter pw = response.getWriter();
+                int Count = (int)getServletContext().getAttribute("count");
+                pw.write("登录人数:" + Count);
+           }
+```
    
    ### Servlet何时创建，何时销毁
    创建：服务器启动的时候,会为托管得每一个web应用程序创建一个servletContext对象。
@@ -296,7 +311,62 @@ LoginServlet.java
    * ServletContext 的作用范围
    > 只要在这个项目里面都可以取数据
    
-   ## HttpServletRequest
+## HttpServletRequest
    
-   > 这个对象
-   
+> 这个对象封装了客户端提交过来的所有数据。
+```java
+获取头信息
+
+     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+     
+          //1.取出请求里面的所有头信息，得到一个枚举集合
+           Enumeration<String> headerNames = request.getHeaderNames();
+           while(headerNames.hasMoreElements()) {
+                String name = (String)headerNames.nextElement();
+                String value = request.getHeader(name);
+                System.out.pr intln(name + " = " + value);
+            }  
+     }
+ ```
+
+ ```
+得到的头数据
+   accept = image/gif, image/jpeg, image/pjpeg, application/x-ms-application, application/xaml+xml, application/x-ms-xbap, application/vnd.ms-excel, application/vnd.ms-powerpoint, application/msword, */*
+   accept-language = zh-Hans-CN,zh-Hans;q=0.8,en-US;q=0.5,en;q=0.3
+   cache-control = no-cache
+   ua-cpu = AMD64
+   accept-encoding = gzip, deflate
+   user-agent = Mozilla/5.0 (Windows NT 6.2; Win64; x64; Trident/7.0; rv:11.0) like Gecko
+   host = localhost:8080
+   connection = Keep-Alive
+   accept = image/gif, image/jpeg, image/pjpeg, application/x-ms-application, application/xaml+xml, application/x-ms-xbap, application/vnd.ms-excel, application/vnd.ms-powerpoint, application/msword, */*
+   accept-language = zh-Hans-CN,zh-Hans;q=0.8,en-US;q=0.5,en;q=0.3
+   cache-control = no-cache
+   ua-cpu = AMD64
+   accept-encoding = gzip, deflate
+   user-agent = Mozilla/5.0 (Windows NT 6.2; Win64; x64; Trident/7.0; rv:11.0) like Gecko
+   host = localhost:8080
+   connection = Keep-Alive
+```
+
+```
+获取请求体信息
+
+      protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+             //2.获取请求体数据，即客户端提交的数据
+             String name = request.getParameter("name");
+             String address = request.getParameter("address");
+
+             //获取所有参数
+             Enumeration<String> parameterNames = request.getParameterNames();
+
+             //获取所有参数
+             Map<String, String[]> parameterMap = request.getParameterMap();
+             Set<String> keySet = parameterMap.keySet();
+             Iterator<String> iterator = keySet.iterator();
+             while(!iterator.hasNext()) {
+              String key = (String)iterator.next();
+              String value = parameterMap.get(key)[0];
+             }
+       }
+ ```
