--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -189,11 +189,11 @@
  
   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet3.PNG)
  
- * 根据classloader去获取工程下的资源 加载器(JDBC)
+ * 根据classloader去获取工程下的资源 加载器(JDBC)<
  
   ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet4.PNG)
 
-#### 存取数据，servlet间共享数据 域对象
+#### 存取数据，servlet间共享数据 域对象<br>
 
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet5.PNG)
  
@@ -287,7 +287,7 @@ LoginServlet.java
 
    ```
    
-5.在界面上显示成功登录数量
+5.在界面上显示成功登录数量<br>
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet6.PNG)
 
 ```xml
@@ -314,9 +314,8 @@ LoginServlet.java
 ## HttpServletRequest
    
 > 这个对象封装了客户端提交过来的所有数据。
+#### 1.获取头信息
 ```java
-获取头信息
-
      protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
      
           //1.取出请求里面的所有头信息，得到一个枚举集合
@@ -348,25 +347,56 @@ LoginServlet.java
    host = localhost:8080
    connection = Keep-Alive
 ```
-
-```
-获取请求体信息
-
+#### 2.获取请求体信息
+```java
       protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
              //2.获取请求体数据，即客户端提交的数据
              String name = request.getParameter("name");
              String address = request.getParameter("address");
 
-             //获取所有参数
+             //获取所有参数，得到一个枚举集合
              Enumeration<String> parameterNames = request.getParameterNames();
 
-             //获取所有参数
+             //获取所有参数，得到一个枚举集合，一个key可以对应多个值
              Map<String, String[]> parameterMap = request.getParameterMap();
              Set<String> keySet = parameterMap.keySet();
              Iterator<String> iterator = keySet.iterator();
              while(!iterator.hasNext()) {
               String key = (String)iterator.next();
-              String value = parameterMap.get(key)[0];
+              String value = parameterMap.get(key)[0]; //对应第一个值
+             //String value1 = parameterMap.get(key)[1];
              }
        }
  ```
+ 
+ #### 3.获取中文数据
+ > 客户端提交给服务器端的数据中如果带有中文，有可能出现乱码情况，可以参照一下的方法解决。
+ * 如果是GET方式
+   * 1.编码转换
+ ```java
+       protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+              String userName = request.getParameter("username");
+              
+              //GET请求过来的数据，在rul地址栏上就已经经过编码了，所有我们得到的是乱码
+              //tomcat收到了这批数据，getParameter默认使用ISO-8859-1去解码,XXX.getBytes("ISO-8859-1")
+              //先让文字回到ISO-8859-1对应的字节数组，然后再按utf-8编码
+              
+              userName = new String(userName.getBytes("ISO-8859-1"),"UTF-8");
+       }
+ ```
+  * 2.直接在tomcat里面做配置（conf/server.xml，加上URIEncoding="utf-8")，以后get请求雇来的数据就是都是用utf-8编码<br>
+  ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet7.PNG)
+
+* 如果是POST方法
+```java
+
+      //doPost调用DoGet方法
+      protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+             //这个说的是设置请求体里面的文字编码，对get方式无效
+             request.setCharacterEncoding("UTF-8"); 
+             //这行设置一定要写在getParameter之前
+
+             String userName = request.getParameter("username");
+        }
+```
