--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -1,6 +1,6 @@
 # Servlet
 
-## Servlet基础
+## 一、Servlet基础
 
 #### * servlet是什么
 
@@ -88,7 +88,7 @@
         </servlet>
 ```
 
-## ServletConfig
+## 二、ServletConfig
 
 ```java
     //1.得到servlet配置对象,专门用于在配置servlet的信息
@@ -114,7 +114,7 @@
 
 > 使用他人开发的servlet,如果刚好这个servlet里面需要一个数字或者变量,我们在注册servlet时,需要在web.xml里生命init-params.
 
-##  HttpServletRequest和HttpServletResponse
+##  三、HttpServletRequest和HttpServletResponse
 
 ### Servlet配置方式
 
@@ -137,7 +137,7 @@
   * 写法: /\*.扩展名  /\*.aa   /\*.bb 
   
 
-## ServletContext
+## 四、ServletContext
 * Servlet 上下文
 
 > 每个java虚拟机中的每个web工程只有一个ServletContext对象
@@ -311,7 +311,7 @@ LoginServlet.java
    * ServletContext 的作用范围
    > 只要在这个项目里面都可以取数据
    
-## HttpServletRequest
+## 五、HttpServletRequest
    
 > 这个对象封装了客户端提交过来的所有数据。
 #### 1.获取头信息
@@ -373,19 +373,20 @@ LoginServlet.java
  > 客户端提交给服务器端的数据中如果带有中文，有可能出现乱码情况，可以参照一下的方法解决。
  * 如果是GET方式
    * 1.编码转换
- ```java
-       protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-              String userName = request.getParameter("username");
-              
-              //GET请求过来的数据，在rul地址栏上就已经经过编码了，所有我们得到的是乱码
-              //tomcat收到了这批数据，getParameter默认使用ISO-8859-1去解码,XXX.getBytes("ISO-8859-1")
-              //先让文字回到ISO-8859-1对应的字节数组，然后再按utf-8编码
-              
-              userName = new String(userName.getBytes("ISO-8859-1"),"UTF-8");
-       }
- ```
-  * 2.直接在tomcat里面做配置（conf/server.xml，加上URIEncoding="utf-8")，以后get请求雇来的数据就是都是用utf-8编码<br>
-  ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet7.PNG)
+   
+   ```java
+           protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+                  String userName = request.getParameter("username");
+
+                  //GET请求过来的数据，在rul地址栏上就已经经过编码了，所有我们得到的是乱码
+                  //tomcat收到了这批数据，getParameter默认使用ISO-8859-1去解码,XXX.getBytes("ISO-8859-1")
+                  //先让文字回到ISO-8859-1对应的字节数组，然后再按utf-8编码
+
+                  userName = new String(userName.getBytes("ISO-8859-1"),"UTF-8");
+           }
+   ```   
+   * 2.直接在tomcat里面做配置（conf/server.xml，加上URIEncoding="utf-8")，以后get请求的数据就都用utf-8编码<br>
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet7.PNG)
 
 * 如果是POST方法
 ```java
