--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -143,11 +143,11 @@
 > 每个java虚拟机中的每个web工程只有一个ServletContext对象
 
 ### ServletContxet的作用
-1.可以获取全局变量
-2.可以获取web应用中的资源
-3.存取数据，servlet间共享数据 域对象
+1.可以获取全局变量<br>
+2.可以获取web应用中的资源<br>
+3.存取数据，servlet间共享数据 域对象<br>
 
-#### 可以获取全局变量
+#### 1.可以获取全局变量
 * 声明
 ```xml
         <context-param>
@@ -163,70 +163,70 @@
       ServeletContext context = getServletContext();
       String address = context.getInitParameter("address");
 ```
-#### 可以获取web应用中的资源
+#### 2.可以获取web应用中的资源
 
 * 获取资源在tomcat里面的绝对路径
   * 到的是项目在tomcat里面的根目录<br>
  `ontext.getRealpath("");`
   * 这里得到的是文件的绝对路径<br>
-`String path = context.getRealPath("file/config.properties");`
- ```java
- //1.ServletContext对象
- ServletContext context = getServletContext();
- //获取给定文件在服务器上的绝对路径
- String path = context.getRealPath("file/config.properties");
- 
- //2创建属性对象
- Properties properties = new Properties();
- InputStream is = new FileInputStream(path);
- properties.load(is);
- 
- //3.获取name属性的值
- String naem = properties.getProperty("name");
- ```
+  `String path = context.getRealPath("file/config.properties");`
+   ```java
+        //1.ServletContext对象
+        ServletContext context = getServletContext();
+        //获取给定文件在服务器上的绝对路径
+        String path = context.getRealPath("file/config.properties");
+
+        //2创建属性对象
+        Properties properties = new Properties();
+        InputStream is = new FileInputStream(path);
+        properties.load(is);
+
+        //3.获取name属性的值
+        String naem = properties.getProperty("name");
+   ```
  
  * getResourceAsStream获取资源流对象
  
-  ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet3.PNG)
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet3.PNG)
  
  * 根据classloader去获取工程下的资源 加载器(JDBC)<
  
-  ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet4.PNG)
+    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet4.PNG)
 
-#### 存取数据，servlet间共享数据 域对象<br>
+#### 3.存取数据，servlet间共享数据 域对象<br>
 
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet5.PNG)
  
-1.定义一个html页面，定义一个form表单
+* ①定义一个html页面，定义一个form表单
 ```html
-login.html
+     login.html
 
-      <body>
-           <h2>请输入以下内容，完成登录</h2>
+           <body>
+                <h2>请输入以下内容，完成登录</h2>
 
-            <form action="LoginServlet" method="get">
-                账号: <input type="text" name="username"/><br> 
-                密码: <input type="password" name="password"/><br>
-                <input type="submit" value="登录"/>
-            </form>
+                 <form action="LoginServlet" method="get">
+                     账号: <input type="text" name="username"/><br> 
+                     密码: <input type="password" name="password"/><br>
+                     <input type="submit" value="登录"/>
+                 </form>
 
-      </body>
+           </body>
 ```
 
-* 细节处理 
- ```html
-          <!--      A路径：Servlet的路径： -->
-          <!--             http:localhost:8080/Demo04/LoginServlet -->
-          <!--      B路径：当前这个html的路径 -->
-          <!--              http:localhost:8080/Demo04/login.html -->
-          
-           <!-- 所以action的值为servlet的路径 -->
-           <form action="LoginServlet" method="get">
-           
-            <!-- 也可以写绝对路径路径 -->
-            <form action="/Demo04/LoginServlet" method="get">
- ```
-2.定义一个Servlet,名为LoginServlet
+   * 细节处理 
+```html
+            <!--      A路径：Servlet的路径： -->
+            <!--             http:localhost:8080/Demo04/LoginServlet -->
+            <!--      B路径：当前这个html的路径 -->
+            <!--              http:localhost:8080/Demo04/login.html -->
+
+             <!-- 所以action的值为servlet的路径 -->
+             <form action="LoginServlet" method="get">
+
+              <!-- 也可以写绝对路径路径 -->
+              <form action="/Demo04/LoginServlet" method="get">
+```
+* ②定义一个Servlet,名为LoginServlet
 ```java
 
 LoginServlet.java
@@ -239,7 +239,7 @@ LoginServlet.java
         //2.校验数据
        }
  ```
-3.针对成功或者失败，进行判断，然后跳转新页面
+* ③针对成功或者失败，进行判断，然后跳转新页面
 ```java
 LoginServlet.java
 
@@ -266,7 +266,7 @@ LoginServlet.java
        }
       }
 ```
-4.统计成功登录次数
+* ④统计成功登录次数
 ```java
        if("admin".equals(userName) && "123".equals(password)){
           //1.成功的次数累加
@@ -287,7 +287,7 @@ LoginServlet.java
 
    ```
    
-5.在界面上显示成功登录数量<br>
+* ⑤在界面上显示成功登录数量<br>
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet6.PNG)
 
 ```xml
