--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -2,7 +2,7 @@
 
 ## 一、Servlet基础
 
-#### * servlet是什么
+ #### * servlet是什么
 
 > 其实就是一个Java程序,运行在web服务器上,用于接收和响应客户端的http请求.<br>
  更多的是配合动态资源来做.当静态资源也需要使用带servlet,只不过是Tomcat里面已经定义好的一个DefaultServlet.
@@ -401,3 +401,103 @@ LoginServlet.java
              String userName = request.getParameter("username");
         }
 ```
+
+## 六、HttpServletResponse
+
+> 负责返回数据给客户端。
+
+### 1.返回数据 
+
+* 输出数据到页面上
+  ```java
+      protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+             //以字符流的方式写数据
+             response.getWriter().write("<h1>hello response...</h1>");
+             //以字节流的方式写数据,注意getBytes()
+             response.getOutputStream().write("<h1>hello response...222</h1>".getBytes());
+             //设置当前请求的处理状态码
+             response.setStatus("");
+             //设置一个头
+             response.setHeader(name, value);
+             //设置响应的内容类型，以及编码
+             response.setContentType(type);
+       }
+   ```
+ * 响应的数据中有中文，那么可能出现乱码
+   * 以字符流输出
+    ```java
+          //这里写出去的文字，默认使用的是ISO-8859-1,我们可指定编码类型
+          //1.指定输出到客户端的时候，文字使用UTF-8编码
+          response.setCharacterEncoding("UTF-8");
+          
+          //2.指定浏览器得到数据时，使用UTF-8解码
+          response.setHeader("Content-Type", "text.html;charset=UTF-8");
+          
+          //以字符流的方式写数据
+          response.getWriter().write("<h1>你好响应</h1>");
+     ```
+   * 以字节流输出
+   ```java
+          //1.指定浏览器得到数据时，使用的码表
+          response.setHeader("Content-Type", "text.html;charset=UTF-8");
+          //2.指定输出中文使用的码表，默认为UTF-8
+          // response.getOutputStream().write("你好，响应".getBytes("UTF-8"));
+          response.getOutputStream().write("你好，响应".getBytes());
+     ```
+     * 不管是字节流还是字符流，可直接使用一行代码,然后写数据即可
+     ```java
+          //设置响应的数据类型是UTF-8，并且告知浏览器使用UTF-8来编码
+          response.setContentType("text.html;charset=UTF-8");
+     ```
+### 2.下载文件
+*  使用Tomcat的默认servlet去提供下载
+   ```html
+   index.html
+
+        让Tomcat的默认servlet去提供下载<br>
+              <a href="download/aa.jpg">aa.jpg</a><br>
+               <a href="download/bb.txt">bb.txt</a><br>
+                <a href="download/cc.rar">cc.rar</a><br>
+    ```
+* 手动编码提供下载
+  * index.html
+  ```html
+        手动编码提供下载<br>
+           <a href="Demo01?filename=aa.jpg">aa.jpg</a><br>
+           <a href="Demo01?filename=bb.txt">bb.txt</a><br>
+           <a href="Demo01?filename=cc.rar">cc.rar</a><br>
+  ```
+  * Demo01.java
+  ```java
+       protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        //1.获取需要下载的文件名字 ----inputStream
+        String fileName = request.getParameter("filename");
+
+        //2.获取该文件在tomcat下的绝对路径
+        String path = getServletContext().getRealPath("download/"+fileName);
+
+       //3.让浏览器收到资源时，一下在的方式提醒用户，而不是直接展示
+        response.setHeader("Content-Disposition", "sttachment;filenaem="+fileName);
+      }
+   ```
+   * 以流的形式输出
+   ```java
+       protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+               String fileName = request.getParameter("filename")
+               String path = getServletContext().getRealPath("download/"+fileName);
+               response.setHeader("Content-Disposition", "sttachment;filenaem="+fileName);
+
+               //转化成输出流
+               InputStream is = new FileInputStream(path);
+               OutputStream os = response.getOutputStream();
+
+               int len = 0;
+               byte[]buffer = new byte[1024];
+               while((len = is.read(buffer)) != -1) {
+                os.write(buffer,0,len);
+               }
+               os.close();
+               is.close();
+     }
+     ```
+      
