--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -474,10 +474,11 @@ LoginServlet.java
         String fileName = request.getParameter("filename");
 
         //2.获取该文件在tomcat下的绝对路径
+        //注意download后面的斜杠
         String path = getServletContext().getRealPath("download/"+fileName);
 
        //3.让浏览器收到资源时，一下在的方式提醒用户，而不是直接展示
-        response.setHeader("Content-Disposition", "sttachment;filenaem="+fileName);
+        response.setHeader("Content-Disposition", "attachment;filename="+fileName);
       }
    ```
    * 以流的形式输出
@@ -485,8 +486,7 @@ LoginServlet.java
        protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
                String fileName = request.getParameter("filename")
                String path = getServletContext().getRealPath("download/"+fileName);
-               response.setHeader("Content-Disposition", "sttachment;filenaem="+fileName);
-
+                response.setHeader("Content-Disposition", "attachment;filename="+fileName);
                //转化成输出流
                InputStream is = new FileInputStream(path);
                OutputStream os = response.getOutputStream();
