--- a/Javaweb/4.Servlet.md
+++ b/Javaweb/4.Servlet.md
@@ -500,4 +500,81 @@ LoginServlet.java
                is.close();
      }
      ```
-      
+ 
+### 3.中文名文件下载
+*  手动编码提供下载
+   ```html
+     <a href="Demo01?filename=张三.txt">张三.txt</a><br>
+   ```
+* 对中文进行编码
+  * 对得到的文件名进行重新编码
+  ```java
+         fileName = new String(fileName.getBytes("ISO-8859-1"),"UTF-8");	  
+  ```
+  * 根据浏览器类型编码
+  ```java
+         /*
+          * 如果是IE、Chrome浏览器，使用URLEncoding编码
+          * 如果是Firefox，使用Base64编码
+          */
+         //获取来访的而客户端类型
+         String clientType = request.getHeader("User-Agent");
+
+         if(clientType.contains("Firefox")) {
+            fileName = DownLoadUtil.base64EncodeFileName(fileName);
+         }else {
+          fileName = URLEncoder.encode(fileName, "UTF-8");
+         }
+    ```
+    * base64编码
+      * [Java如何进行Base64的编码(Encode)与解码(Decode)](https://blog.csdn.net/zhou_kapenter/article/details/62890262)<br>
+      * DownLoadUtil类的实现
+        ```java
+            import java.io.UnsupportedEncodingException;
+            import java.util.Base64;
+
+            public class DownLoadUtil {
+               public static String base64EncodeFileName(String fileName) {
+                     Base64.Encoder base64Encoder = Base64.getEncoder(); 
+                     try {
+                         return "=?UTF-8?B?" + new String(base64Encoder.encode(fileName.getBytes("UTF-8"))) + "?=";
+                     }catch(UnsupportedEncodingException e) {
+                         e.printStackTrace();
+                      throw new RuntimeException();
+                     }
+                 }
+            }
+
+        ```
+        
+## 七、重定向和请求转发
+### 重定向
+* 代码
+```java
+   //以前的写法
+			response.setStatus(302);
+			response.setHeader("Location", "login_success.html");
+			// 重定向的写法：参数--跳转的位置
+			response.sendRedirect("login_success.html");
+```
+* 特点
+  * 1.地址上显示的是最后那个资源的路径地址
+  * 2.请求的次数至少有两次，服务器在一次请求后，会返回一个302以及一个地址，浏览器根据这个地址执行第二次访问。
+  * 3.可以跳转到任意路径
+  * 4.效率稍微低一点，执行两次请求。
+  * 5.后续的请求，没法使用上一次的request存储的数据，或者没法使用上一次的request对象，因为两次的请求不同。
+### 请求转发
+* 代码
+```java
+    //请求转发的写法：参数--跳转的位置
+    request.getRequestDispatcher("login_success.html");
+```
+* 特点
+  * 1.地址栏上显示的是请求servlet的地址
+  * 2.请求次数只有一次，服务器内部版客户执行了后续的操作
+  * 3.只能跳转自己项目的资源路路径
+  * 4.效率稍微搞一单，执行一次请求
+  * 5.可以使用上一次的request对象
+  
+  
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/servlet8.PNG)
