Update and rename 5.Cookie.md to 5.Cookie&Session.md

--- a/Javaweb/5.Cookie&Session.md
+++ b/Javaweb/5.Cookie&Session.md
@@ -58,10 +58,10 @@
          
          
 ## 例子1: 获取上一次访问时间
-  1.判断账号是否正确
-  2.若正确，则获取cookie,但得到的是一个数组，我们要从数组里面找到我们想要的对象
-  3.如果找到的对象为空，表明是第一次登陆，那么要添加cookie
-  4.如果找到的对象不为空，表明不是第一次登录，更新cookie
+  1.判断账号是否正确<br>
+  2.若正确，则获取cookie,但得到的是一个数组，我们要从数组里面找到我们想要的对象<br>
+  3.如果找到的对象为空，表明是第一次登陆，那么要添加cookie<br>
+  4.如果找到的对象不为空，表明不是第一次登录，更新cookie<br>
   
    ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/cookie1.PNG)
 * 从数组中获取需要的信息
@@ -117,18 +117,18 @@
 ### JSP 里面使用java代码<br>
 * Java Server Pager ---> 最终会翻译成一个类，就是一个Servlet
     * 定义一个全局变量
-    ```jsp
-      <%! int a = 99; %>
-    ```
+    	```jsp
+     	 <%! int a = 99; %>
+    	```
     * 定义一个局部变量
-    ```jsp
-     <% int b = 999; %>
-     ```
+	    ```jsp
+	     <% int b = 999; %>
+	     ```
      * 在jsp页面上，显示a 和 b的值
-     ```jsp
-     <%=a %>
-     <%=b %>
-     ```
+	     ```jsp
+	     <%=a %>
+	     <%=b %>
+	     ```
 * 浏览记录的展示和删除<br>
     * jsp显示浏览记录
       ```jsp
@@ -231,3 +231,93 @@
 ## 例子3： 简单购物车
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/session1.PNG)
 ### Servlet的实现
+* product.jsp
+```jsp
+	<body>
+		 <a href="CarServlet?id=0"><h3>Iphone7</h3></a><br>
+		 <a href="CarServlet?id=1"><h3>小米6</h3></a><br>
+		 <a href="CarServlet?id=2"><h3>三星Note8</h3></a><br>
+		 <a href="CarServlet?id=3"><h3>魅族7</h3></a><br>
+		 <a href="CarServlet?id=4"><h3>华为9</h3></a><br>
+	</body>
+```
+* CarServlet.java
+```java
+	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		response.setContentType("text/html;charset=utf-8");
+		
+		//1.获取要添加到购物车的商品id
+		int id = Integer.parseInt(request.getParameter("id")); //0,1,2,3,4
+		String [] names = {"Iphone7","小米6","三星Note8","魅族7","华为9"};
+		//获取id对应的商品名
+		String name = names[id];
+		
+		//2.获取过无车存放东西的session，Map<String,integer>
+		
+		//把一个map对西乡存放到session里，并保证只保存一次
+		Map<String,Integer> map = (Map<String,Integer>)request.getSession().getAttribute("cart");
+		//如果session里面没有存放任何东西
+		if(map == null) {
+			//创建一个map
+			map = new LinkedHashMap<String,Integer>();
+			request.getSession().setAttribute("cart",map);
+		}
+		
+		
+		//3.判断购物车里有没有该商品
+		if(map.containsKey(name)) {
+			//在原来的值基础上 +1
+			map.put(name, map.get(name) + 1);
+		}else {
+			//没有买过该商品，设当前值为1
+			map.put(name, 1);
+		}
+		
+		//4.输出界面（跳转）
+		response.getWriter().write("<a href='product_list.jsp'><h3>继续购物<h3><br>");
+		response.getWriter().write("<a href='cart.jsp'><h3>去购物车结算<h3>");
+	}
+```
+### 展示购物车内容
+* cart.jsp
+```jsp
+	<body>
+	       <h2>您的购物车商品如下：</h2>
+
+	       <%
+		   //1.先获取到map
+		   Map<String,Integer> map = (Map<String,Integer>)session.getAttribute("cart");
+
+		   //遍历map
+		   if(map != null){
+			   for(String key : map.keySet()){
+				   int value = map.get(key);
+	      %>
+		    <h3>名称：<%=key %>    数量： <%=value %></h3>
+	      <% 
+			   }
+		   }
+
+	       %>
+	</body>
+```
+### 清空购物车
+* cart.jsp
+```jsp
+<a href="ClearCartServlet"><h4>清空购物车</h4></a>
+```
+
+* ClearCartServlet.java
+```java
+	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		HttpSession session = request.getSession();
+		
+		//方法1：从session中移除某一个数据
+		session.removeAttribute("cart");
+		
+		//方法2：强制干掉session,里面的所有数据将被清空
+		session.invalidate();
+		
+		response.sendRedirect("cart.jsp");
+	}
+```
