--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -9,4 +9,85 @@
 > html多数情况下用来显示静态内容，但是有时候我们需要在网页上显示一些动态数据，比如：查询所有的学生信息，根据姓名去查询具体某个学生。
 这些动作都需要去查询数据库，然后再网页上显示，html是不支持写java代码的，但是jsp里面可以写java代码。
 
-* 怎么用JSP
+## 怎么用JSP
+### JSP指令
+#### 指令格式
+```jsp
+  <%@ 指令名称 %>
+```
+#### 3个指令
+* page指令
+    * language
+    > 表明jsp页面中可以写java代码
+    * contentType
+    > 表明文件类型，告诉浏览器是什么类型的能美容，以及用的什么解码
+    ```
+        contentType="text/html; charset=UTF-8"
+        text/html   MIMEType 这是一个文本文件，html网页
+        audio/mpeg  这是一个MP3音频文件
+        video/mp4   这是一个MP4视频文件
+        ... ...
+        查看%tomcatHOME%/conf/web.xml
+    ```
+    * pageEncoding 
+    > jsp内容编码
+    * extends 
+    > 用于指定jsp翻译成java文件后，继承的父类是谁，一般不用改
+    * import
+    > 导入包使用
+    * session
+    > 可选值有true & false
+    > 用于控制这个jsp页面里面，能够直接使用sessio对象
+    > 具体的区别是，翻译后的Java文件中，如果值是true，那么代码里面会有getSession()的调用，如果是false,那么不会有该方法，即无法使用session。
+    * errorPage
+    > 指的是错误的页面，值需要给出错误时跳转的页面路径
+    * isErrorPage
+    > 声明某一页面是否是发生错误后跳转到的页面
+
+* include指令
+> 包含另外一个jsp的内容进来,几把另一个页面的所有标签全部包含进来
+```jsp
+    <%@ include file="index02.jsp" %>
+```
+* taglib指令
+```jsp
+    <%@ taglib prefix="" uri="" %>
+    uri:标签路径
+    prefix:标签库的别名
+```
+
+### jsp动作标签
+* jsp:include
+```jsp
+  <jsp:include page=""></jsp:include>
+```
+> 包含指定的页面，这里是动态包含，即不把包含的页面所有元素标签全部拿过来输出，而是把它的运行结果拿过来。
+
+* jsp:forward
+```jsp
+  <jsp:forward page=""></jsp:forward>
+```
+> 前往哪一个页面，相当于请求转发
+```jsp
+  <%
+       request.getRequestDispatcher("index02.jsp").forward(request, response);
+  %>
+```
+* jsp:param
+    ```jsp
+       <jsp:param value="" name=""/>
+    ```
+    > 在包含某个页面的时候，后者再跳转某一个页面的时候，加入这个参数<br>
+
+    * 在index.jsp中发布参数
+      ```jsp
+            <jsp:forward page="index02.jsp">
+                <jsp:param value="beijing" name="address"/>
+            </jsp:forward>
+      ```
+    * 在index02.jsp中获取参数
+      ```jsp
+             <%= request.getParameter("adress") %>
+      ```
+
+
