--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -89,5 +89,45 @@
       ```jsp
              <%= request.getParameter("adress") %>
       ```
-
+### jsp内置对象
+> 所谓内置对象，就是我们可以直接在jsp页面中使用这些对象，不用创建<br>
+1. pageContext<br>
+2. request<br>
+3. session<br>
+4. application<br>
+以上四个是作用域<br>
+* 作用域
+> 表示这些对象可以存值，但取值范围有限  setAttribute 和 getAttribute
+```java
+    <!-- 使用作用域来存储数据 -->
+       <%
+           pageContext.setAttribute("name", "pageContext");
+           request.setAttribute("name", "request");
+           session.setAttribute("name", "session");
+           application.setAttribute("name", "application");
+       %>
+    <!-- 取出四个数据域的值 -->
+      <%= pageContext.getAttribute("name") %>
+      <%= request.getAttribute("name") %>
+      <%= session.getAttribute("name") %>
+      <%= application.getAttribute("name") %>
+```
+* 四个作用域的区别
+    * pageContext 【PageContext】
+    > 作用域仅限于当前页面
+    * request 【HttpServletRequest】
+    > 作用域仅限于一次请求，只要服务器对该请求做出了响应（重定向），这个域中存的值就没有了。
+    * session 【HttpSession】
+    > 作用域仅限于一次会话（多次请求与响应）当中
+    * application 【ServletContext】
+    > 整个工程中都可以访问，服务关闭后就不能访问
+* 其他对象
+    * exception 【Throwable】 
+    > 在页面配置为`<%@ isErrorPage="true" %>`时才能使用
+    * page 【object】
+    > 就是这个jsp翻译成的java类的实例对象
+    * config 【ServletCoonfig】
+    * out 【JspWriter】
+    * response 【HttpServletResponse】<br>
+      ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/jsp1.PNG)
 
