--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -129,5 +129,5 @@
     * config 【ServletCoonfig】
     * out 【JspWriter】
     * response 【HttpServletResponse】<br>
-      ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/jsp1.PNG)
+    <img src="https://github.com/WuDeluan/Notes/blob/master/picture/jsp.PNG" width="600" height="300"></img>
 
