--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -64,19 +64,13 @@
 > 包含指定的页面，这里是动态包含，即不把包含的页面所有元素标签全部拿过来输出，而是把它的运行结果拿过来。
 
 * jsp:forward
-```jsp
-  <jsp:forward page=""></jsp:forward>
-```
+`<jsp:forward page=""></jsp:forward>`
 > 前往哪一个页面，相当于请求转发
 ```jsp
-  <%
-       request.getRequestDispatcher("index02.jsp").forward(request, response);
-  %>
+    <% request.getRequestDispatcher("index02.jsp").forward(request, response);%>
 ```
 * jsp:param
-    ```jsp
-       <jsp:param value="" name=""/>
-    ```
+`<jsp:param value="" name=""/>`
     > 在包含某个页面的时候，后者再跳转某一个页面的时候，加入这个参数<br>
 
     * 在index.jsp中发布参数
@@ -131,3 +125,60 @@
     * response 【HttpServletResponse】<br>
     <img src="https://github.com/WuDeluan/Notes/blob/master/picture/jsp.PNG" width="600" height="300"></img>
 
+## EL表达式
+### 取值方法
+* 普通取值方法
+```jsp
+      !-- 使用作用域来存储数据 -->
+      <%
+		     pageContext.setAttribute("name", "pageContext");
+		     request.setAttribute("name", "request");
+		     session.setAttribute("name", "session");
+		     application.setAttribute("name", "application");
+      %>
+      <!-- 取出四个数据域的值 -->
+      <%= pageContext.getAttribute("name") %>
+      <%= request.getAttribute("name") %>
+      <%= session.getAttribute("name") %>
+      <%= application.getAttribute("name") %>
+```
+* 使用EL表达式取作用域中的值
+```jsp
+      ${pageScope.name }
+      ${requestScope.name }
+      ${sessionScope.name }
+      ${applicationScope.name }
+```
+* 使用EL表达式取数组中的值
+```jsp
+      <%
+        String [] a = {"aa","bb","cc"};
+        pageContext.setAttribute("array", a);
+      %>
+
+      ${array[0] } ${array[1] } ${array[2] }
+```
+  * 使用EL表达式取集合中的值
+```jsp
+      <%
+        List list = new ArrayList();
+        list.add("11");
+        list.add("22");
+        list.add("33");
+        pageContext.setAttribute("list", list);
+      %>
+
+      ${list[0] } ${list[1] } ${list[2] } ${list[3] }
+```
+* 使用EL表达式取Map中的值
+```jsp
+      <%
+         Map map = new HashMap();
+         map.put("name", "张三")	;
+         map.put("age", 18)	;
+         map.put("addrss", "beijing");
+         pageContext.setAttribute("map", "map");
+      %>
+
+      ${map.name } ${map.age } ${map.address }
+```
