--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -57,20 +57,18 @@
 ```
 
 ### jsp动作标签
-* jsp:include
-```jsp
-  <jsp:include page=""></jsp:include>
-```
+* jsp:include<br>
+	  `<jsp:include page=""></jsp:include>`
 > 包含指定的页面，这里是动态包含，即不把包含的页面所有元素标签全部拿过来输出，而是把它的运行结果拿过来。
 
-* jsp:forward
-`<jsp:forward page=""></jsp:forward>`
+* jsp:forward<br>
+	`<jsp:forward page=""></jsp:forward>`
 > 前往哪一个页面，相当于请求转发
 ```jsp
     <% request.getRequestDispatcher("index02.jsp").forward(request, response);%>
 ```
-* jsp:param
-`<jsp:param value="" name=""/>`
+* jsp:param<br>
+	`<jsp:param value="" name=""/>`
     > 在包含某个页面的时候，后者再跳转某一个页面的时候，加入这个参数<br>
 
     * 在index.jsp中发布参数
@@ -182,3 +180,51 @@
 
       ${map.name } ${map.age } ${map.address }
 ```
+### 取值细节
+* 1.如果值是有下标的，那么直接使用[]
+```jsp
+      <%
+        String [] a = {"aa","bb","cc"};
+        pageContext.setAttribute("array", a);
+      %>
+      
+      ${array[0] } --->这里的array是arribute里面的name
+```
+* 2.如果没有下标，直接用 . 的方式去取
+```jsp
+     <%
+     	User user = new User("zhangsan",18);
+	session.setAttribute("u",user);
+      %>
+      
+      ${ u.name } ${ u.age }
+```
+## EL表达式的11个内置对象
+* JSP 相关
+    * pageContext 
+    > 对应于当前页面的chuli
+* 作用域 相关
+    * pageScope
+    > 与页面作用域属性的名称和值相关联的Map类
+    * requestScope
+    > 与请求作用域属性的名称和值相关联的Map类
+    * sessionScope
+    > 与会话作用域属性的名称和值相关联的Map类
+    * applicationScope
+    > 与应用程序作用域属性的名称和值相关联的Map类
+* 请求参数 相关    
+    * param 
+    > 按名称存储请求餐宿的主要指的Map类
+    * paramvalue
+    > 间请求参数的所有值作为String数组存储的Map类
+* 请求头 相关
+    * header
+    > 按名称存储请求头主要参数的Map类
+    * headerValue
+    > 将请求头的所有值作为String数组存储的Map类
+* Cookie 相关
+    * ookie 
+    > 按名称存储请求附带的Cookie的Map类
+* 初始化参数 相关
+    * initParam
+    > 按名称存储Web应用程序上下文初始化参数的Map类
