--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -228,3 +228,66 @@
 * 初始化参数 相关
     * initParam
     > 按名称存储Web应用程序上下文初始化参数的Map类
+
+## JSTL
+> 全称 ： JSP Standard tag Library
+> 讲话jsp的代码编写，使用taglib指令来引入标签库
+
+### JSTL的使用
+1. 导入jar文件到工程的WebContent/Web-Inf/lib  jstl.jar standar.jar
+2.在jsp页面上，使用taglib指令
+```jsp
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+```
+### 常用标签
+<c:set></c:set><br>
+<c:if test=""></c:if><br>
+<c:forEach></c:forEach><br>
+
+* c:set
+```jsp
+	<!-- 	声明一个对象name,对象的值为zhangsan -->
+	<!-- 对象默认存储到page,这里我们指定为session -->
+	<c:set var="naem" value="zhangsan" scope="Session"></c:set>
+
+	 ${ sessionScope.name };
+```
+* c:if
+> 判断test里的表达式是否满足，如果满足，就执行c：if标签中的输出
+```jsp
+	 <c:set var="age" value="18"></c:set>
+	 <c:if test="${ age > 16 }">
+	     年龄大于16 
+	  </c:if>
+	  
+	  <!-- 定义一个变量名，去接收前面表达式的值，存在session域中，并打印 --> 
+	  <c:set var="age" value="18"></c:set> 
+	  <c:if test="${age > 16 }" var="flag" scope="session"> 
+		${ sessionScope.flag } 
+	
+	  </c:if> 
+```
+* c：forEach
+```jsp
+	<!--  从1开始遍历到10，得到的结果，赋值给i，并且存储到page域中，增幅(step)为2 -->
+	<c:forEach begin="1" end="10" var="i" step="2" >
+	    ${ i }
+	</c:forEach>
+```
+```jsp
+	<%     
+		List list = new ArrayList();
+		list.add(new User("zhangsan",18));
+		list.add(new User("lisi",16));
+		list.add(new User("wangwu",17));
+
+		pageContext.setAttribute("list",list);     			      
+	%>
+
+	<!-- items : 表示遍历哪一个对象，这里必须写EL表达式 -->
+	<!-- value : 便利出来的每一个元素用user去接收 -->
+		<c:forEach var="user" items="${list }">
+			姓名 : ${user.name }
+			年龄 : ${user.age }
+		</c:forEach>
+```
