--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -7,7 +7,7 @@
 * 开启事务 `start transaction`
 * 提交或回滚事务
     * commit : 提交事务
-    * rollback : 回滚事务
+    * rollback : 回滚事务<br>
 1.关闭自动提交功能<br>
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction01.PNG)
 2.演示事务<br>
@@ -65,26 +65,22 @@
   ```
 ### 事物的特性
 * 原子性
-> 指的是 事务中包含的逻辑，不可分割
+`指的是 事务中包含的逻辑，不可分割`
 * 一致性
-> 指的是 事务在执行前后，数据的完整性
+`指的是 事务在执行前后，数据的完整性`
 * 隔离性
-> 指的是 事务在执行期间不应该受到其他事务的影响
+`指的是 事务在执行期间不应该受到其他事务的影响`
 * 持久性
-> 指的是 事务执行成功，那么数据应该持久保存在磁盘上
+`指的是 事务执行成功，那么数据应该持久保存在磁盘上`
 
 ### 事务的安全隐患
 > 不考虑隔离级别的设置，那么会出现以下问题：
 * 读
-> 脏读 不可复读 幻读
-* 脏读
-> 一个事务读到另一个事务还没提交的数据
-* 不可重复读
-> 一个事务读到了另一个事务提交的数据，造成了前后两次查询结果
-* 幻读
-> 一个事务读到另一个事务insert的数据，造成前后查询结果的不一致
+    * 脏读`一个事务读到另一个事务还没提交的数据`
+    * 不可重复读`一个事务读到了另一个事务提交的数据，造成了前后两次查询结果`
+    * 幻读`一个事务读到另一个事务insert的数据，造成前后查询结果的不一致`
 * 写
-> 丢失更新
+    * 丢失更新
 ### 隔离级别
 > mysql默认的隔离级别是 可重复读
 * Read Uncommitted【读未提交】
@@ -92,13 +88,13 @@
 * Repeatable 【重复读】
 * Serializable 【可串行化】
 
-#### 读未提交的演示
+#### 1.读未提交的演示
 1.设置A窗口的隔离级别为 读未提交
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction03.PNG)
 2.两个窗口都分别开启事务
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction04.PNG)
 
-#### 读已提交的演示
+#### 2.读已提交的演示
 1.设置隔离级别为 读已提交
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction05.PNG)
 2.A B 两个窗口都开启事务，在B窗口执行更新操作
@@ -107,7 +103,7 @@
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction07.PNG)
 > 这个隔离级别能够屏蔽脏读的现象，但是也引发了另一个问题，不可复读。
 
-#### 可串行化
+#### 3.可串行化
 > 如果有一个连接的隔离级别设置为可串行化，那么谁先打开了事务，谁就有了先执行的权利，谁后打开事务，谁就只能等之前的事务提交或回滚后，才能执行。
 但是这种隔离级别容易造成性能上的问题，效率较低。
 
