--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -9,9 +9,9 @@
     * commit : 提交事务
     * rollback : 回滚事务<br>
 1.关闭自动提交功能<br>
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction01.PNG)
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction01.PNG)<br>
 2.演示事务<br>
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction02.PNG)
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction02.PNG)<br>
 
 ### 使用代码演示事务
 > 代码里面的事务，主要是针对连接
@@ -88,19 +88,19 @@
 * Repeatable 【重复读】
 * Serializable 【可串行化】
 
-#### 1.读未提交的演示
-1.设置A窗口的隔离级别为 读未提交
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction03.PNG)
-2.两个窗口都分别开启事务
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction04.PNG)
+#### 1.读未提交的演示<br>
+1.设置A窗口的隔离级别为 读未提交<br>
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction03.PNG)<br>
+2.两个窗口都分别开启事务<br>
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction04.PNG)<br>
 
-#### 2.读已提交的演示
-1.设置隔离级别为 读已提交
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction05.PNG)
-2.A B 两个窗口都开启事务，在B窗口执行更新操作
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction06.PNG)
-3.在A窗口执行的查询结果不一致，一次是在B窗口提交事务之前，一次是在B窗口提交事务之后
-![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction07.PNG)
+#### 2.读已提交的演示<br>
+1.设置隔离级别为 读已提交<br>
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction05.PNG)<br>
+2.A B 两个窗口都开启事务，在B窗口执行更新操作<br>
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction06.PNG)<br>
+3.在A窗口执行的查询结果不一致，一次是在B窗口提交事务之前，一次是在B窗口提交事务之后<br>
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction07.PNG)<br>
 > 这个隔离级别能够屏蔽脏读的现象，但是也引发了另一个问题，不可复读。
 
 #### 3.可串行化
@@ -116,7 +116,9 @@
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction08.PNG)
 * 悲观锁
 > 可以在查询的时候，加入 for update
+
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction09.PNG)
 * 乐观锁
 > 需要程序员自己控制
+
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction10.PNG)
